
2021-02-15  Yusuke Yamasaki  <yusuke.yamasaki@iasinc.jp>

	* 0.9.18.0: 
	- bug: Could not open encrypted database (since v0.9.17.0.)
	- new: sqlite3 v3.34.1 with SQLite3MultipleCiphers v1.1.4 AES 128 bit encryption by default.
	  CFLAGS="-DSQLITE_HAS_CODEC -DCODEC_TYPE=CODEC_TYPE_AES128 -DSQLITE_ENABLE_FTS5=1 -msse4.2 -maes"


2020-10-15  Yusuke Yamasaki  <yusuke.yamasaki@iasinc.jp>

	* 0.9.17.0: 
	- new: sqlite3 v3.33.0 with SQLite3MultipleCiphers v1.0.0 AES 128 bit encryption by default.
	  CFLAGS="-DSQLITE_HAS_CODEC -DCODEC_TYPE=CODEC_TYPE_AES128 -DSQLITE_ENABLE_FTS5=1"
	- mod: Tk 8.6.9 compatible patch to ttk (proposed by hkoba.)


2019-10-25  Yusuke Yamasaki  <yusuke.yamasaki@iasinc.jp>

	* 0.9.16.0: 
	- new: sqlite3 v3.30.1 with wxSQLite3 v4.4.8 AES 128 bit encryption.

	* 0.9.15.1: 
	- fix: sqlite3 v3.29.0 did not have extended_errorcode.


2019-08-19  Yusuke Yamasaki  <yusuke.yamasaki@iasinc.jp>

	* 0.9.15: 
	- new: sqlite3 v3.29.0 with wxSQLite3 v4.4.5 AES 128 bit encryption.


2019-06-26  Yusuke Yamasaki  <yusuke.yamasaki@iasinc.jp>

	* 0.9.14: 
	- new: sqlite3 v3.28.0 with wxSQLite3 v4.4.3 AES 128 bit encryption.


2019-04-05  Yusuke Yamasaki  <yusuke.yamasaki@iasinc.jp>

	* 0.9.13: 
	- new: sqlite3 v3.27.2 with wxSQLite3 v4.4.2 AES 128 bit encryption.


2018-12-18  Yusuke Yamasaki  <yusuke.yamasaki@iasinc.jp>

	* 0.9.12: 
	- new: sqlite3 v3.26.0 with wxSQLite3 v4.4.0 AES 128 bit encryption.
	- new: Added extended_errorcode Tcl API which is not supported by the official tclsqlite3.


2018-06-12  Yusuke Yamasaki  <yusuke.yamasaki@iasinc.jp>

	* 0.9.11: 
	- new: sqlite3 v3.24.0 with wxSQLite3 v4.0.4 AES 128 bit encryption.


2018-02-01  Yusuke Yamasaki  <yusuke.yamasaki@iasinc.jp>

	* 0.9.10: 
	- new: sqlite3 v3.22.0 with wxSQLite3 v3.5.9 AES 128 bit encryption.


2017-11-22  Yusuke Yamasaki  <yusuke.yamasaki@iasinc.jp>

	* 0.9.9: 
	- new: sqlite3 v3.21.0 with wxSQLite3 v3.5.8 AES 128 bit encryption.

